<resources>
    <string name="app_name">The Wolf</string>
    <string name="sign_in_your_account">Sign In Your Account</string>
    <string name="google">Google</string>
    <string name="facebook">Facebook</string>
    <string name="facebook_app_id">178405527302761</string>
    <string name="fb_login_protocol_scheme">fb178405527302761</string>
    <string name="image_description">Image Description</string>
    <string name="wolf_icon">wolf icon</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="training">Training</string>
    <string name="newsfeed">NewsFeed</string>
    <string name="calender">Calender</string>
    <string name="account">Account</string>
    <string name="user_profile">User Profile</string>
    <string name="workout">Workout</string>
    <string name="followers">Followers</string>
    <string name="following">Following</string>
    <string name="edit_profile">Edit profile</string>
    <string name="icon">Icon</string>
    <string name="make_your_dream">~ Make your dream ~</string>
    <string name="hi">Hi,</string>
    <string name="complete_your_profile">Complete Your Profile</string>
    <string name="username">Username</string>
    <string name="birthday">Birthday</string>
    <string name="get_started">Get Started</string>
    <string name="next">Next</string>
    <string name="choose_your_level_skill">Choose Your Level Skill</string>
    <string name="image_level_skill">Image Level Skill</string>
    <string name="level_skill">Level Skill</string>
    <string name="gender">Gender</string>
    <string name="country">Country</string>
    <string name="email">Email</string>
    <string name="your_name">Your Name</string>
    <string name="sign_out">Sign Out</string>
    <string name="save">Save</string>
    <string name="name_exercise">Name Exercise</string>
    <string name="name">Name</string>
    <string name="difficulty_levels">Difficulty levels</string>
    <string name="muscle_group">Muscle group</string>
    <string name="search">Search</string>
    <string name="exercise_library">Exercise Library</string>
    <string name="view_all">View All</string>
    <string name="programs">Programs</string>
    <string name="knowledge">Knowledge</string>
    <string name="rep_building">Rep Building</string>
    <string name="april_1_1997">APRIL 1, 1997</string>
    <string name="something_happended_try_again">Something happended. Try again.</string>
    <!-- List gender -->
    <string-array name="names">
        <item>Male</item>
        <item>Female</item>
    </string-array>
    <string-array name="exercise_level">
        <item>Beginner</item> <!-- 0 -->
        <item>Intermediate</item> <!-- 1 -->
        <item>Advanced</item> <!-- 2 -->
    </string-array>
    <string-array name="exercise_bodypart">
        <item>Back</item>
        <!-- 0 -->
        <item>Bicept</item>
        <!-- 1 -->
        <item>Legs</item>
        <!-- 2 -->
        <item>Chest</item>
        <!-- 3 -->
        <item>Tricept</item>
        <!-- 4 -->
        <item>Abs</item>
        <!-- 5 -->
        <item>Shoulder</item>
        <!-- 6 -->
        <item>Whole Body</item>
        <!-- 7 -->
    </string-array>
    <string-array name="status">
        <item>good</item>
        <item>bad</item>
        <item>happy</item>
        <item>love</item>
        <item>hate</item>
    </string-array>
    <string-array name="description">
        <item>this is random description.</item>
        <item>this is random description.</item>
        <item>this is random description.</item>
        <item>this is random description.</item>
        <item>this is random description.</item>
    </string-array>
</resources>