<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/bottomSheetContainer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/training_bottomsheetdialog_corner"
    android:orientation="vertical">

    <ImageView
        android:layout_width="157dp"
        android:layout_height="20dp"
        android:layout_gravity="center_horizontal"
        android:contentDescription="TODO"
        android:scaleType="centerCrop"
        android:src="@drawable/training_vector_remove" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="210dp"
        android:background="@color/colorMain"
        android:gravity="center">

        <VideoView
            android:id="@+id/vid"
            android:layout_width="match_parent"
            android:layout_height="210dp"
             />
    </LinearLayout>


    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/nunito_bold"
        android:text="@string/name"
        android:textColor="@color/colorMain"
        android:textSize="28sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/nunito_bold"
        android:text="@string/difficulty_levels"
        android:textColor="@color/colorTitle_1"
        android:textSize="20sp" />

    <com.google.android.flexbox.FlexboxLayout
        android:id="@+id/add_lvl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="5dp"
        android:orientation="horizontal"
        app:flexWrap="wrap" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/nunito_bold"
        android:text="@string/muscle_group"
        android:textColor="@color/colorTitle_1"
        android:textSize="20sp" />

    <com.google.android.flexbox.FlexboxLayout
        android:id="@+id/add_muscle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="20dp"
        android:orientation="horizontal"
        app:flexWrap="wrap" />


</LinearLayout>