<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login.UserInformation.FragmentInput.InputUserInfor">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="20dp">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/wrap_userName"
            style="@style/CustomTextInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:hint="@string/username">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/userName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:inputType="textVisiblePassword|textNoSuggestions"
                android:maxLength="50"
                android:maxLines="1"
                android:scrollHorizontally="true"
                android:textColor="@color/colorTitle"
                android:textSize="18sp"
                android:textStyle="bold" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/wrap_userBirthday"
            style="@style/CustomTextInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:hint="@string/birthday">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/userBirthday"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="false"
                android:cursorVisible="false"
                android:ellipsize="end"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:inputType="date"
                android:maxLines="1"
                android:scrollHorizontally="true"
                android:textColor="@color/colorTitle"
                android:textSize="18sp"
                android:textStyle="bold" />
        </com.google.android.material.textfield.TextInputLayout>
        <android.widget.Button
            android:id="@+id/nextInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:background="@drawable/login_create_account_button_background"
            android:gravity="center"
            android:textSize="18sp"
            android:text="@string/next"
            android:textColor="@color/colorSub"
            android:paddingStart="30dp"
            android:paddingEnd="30dp"
            android:textStyle="bold"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:textAllCaps="false"
            />
    </LinearLayout>


</FrameLayout>