<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".Login.LoginActivity">

    <RelativeLayout

        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4"
        android:background="@color/colorMain"
        android:orientation="horizontal">

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/introScroll"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:padding="20dp" />

        <com.tbuonomo.viewpagerdotsindicator.DotsIndicator
            android:id="@+id/dotChangeIntro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_margin="25dp"
            app:dotsColor="@color/colorSub"
            app:dotsCornerRadius="8dp"
            app:dotsSize="10dp"
            app:dotsSpacing="4dp"
            app:progressMode="true"
            app:selectedDotColor="@color/colorSub" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_weight="3"
        android:background="@color/colorMain">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/login_background_form"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="30dp"
                android:fontFamily="@font/nunito_extrabold"
                android:text="@string/app_name"
                android:textAllCaps="false"
                android:textColor="@color/colorTitle"
                android:textSize="30sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/sign_in_your_account"
                android:textAllCaps="false"
                android:textSize="20sp"
                android:textStyle="normal" />

            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/loginGmail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:backgroundTint="@color/colorGoogle"
                    app:cornerRadius="15dp"
                    app:icon="@drawable/login_google_png"
                    app:iconTint="@null"
                    app:iconSize="30dp"
                    android:minWidth="220dp"
                    android:onClick="LoginGmail_Click"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:text="@string/google"
                    android:textAllCaps="false"
                    android:textColor="@color/colorSub"
                    android:textSize="18sp"
                    android:textStyle="bold" />
            </FrameLayout>


            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <com.facebook.login.widget.LoginButton
                    android:id="@+id/loginFacebookReal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:visibility="gone" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/loginFacebook"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    app:cornerRadius="15dp"
                    android:backgroundTint="@color/colorFacebook"
                    app:icon="@drawable/login_facebook_png"
                    app:iconTint="@null"
                    app:iconSize="30dp"
                    android:minWidth="220dp"
                    android:onClick="LoginFacebook_Click"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:text="@string/facebook"
                    android:textAllCaps="false"
                    android:textColor="@color/colorSub"
                    android:textSize="18sp"
                    android:textStyle="bold"/>
            </FrameLayout>

        </LinearLayout>
    </RelativeLayout>


</LinearLayout>